  fromSegmentOffset, fromVersion, fromTimestamp and fromSequenceNumber.
* http://redmine.named-data.net/issues/3452 Added Interest.refreshNonce.
* http://redmine.named-data.net/issues/3152 In API callbacks, catch and log exceptions.
* http://redmine.named-data.net/issues/3355 In Producer.createContentKey and produce,
  added an optional onError callback.
* Unit tests: In test_data_methods, added test_verify_ecdsa.
* Unit tests: Added test_link.
* Examples: Added test_sign_verify_data_hmac.

Bug fixes
* Fix bug in encrypt/Schedule to solve problems when the black repetitive interval list is empty.
* In Producer, the produced data name should not use a rounded timestamp.

PyNDN v2.2beta1 (2016-02-03)
----------------------------

Changes
* Use the cryptography package instead of pycrypto. See INSTALL.md to update.
* In OSXPrivateKeyStorage, implemented generateKeyPair.

PyNDN v2.1beta2 (2016-01-07)
----------------------------

Changes
* Added the pyndn.encrypt package for the Group-Based Encryption Protocol, ported from
  https://github.com/named-data/ndn-group-encrypt
* In Name, added support for hash(name). (A Name can be a dictionary key.)
* INSTALL: Removed unsupported OS X 10.8.4.
* INSTALL: Added OS X 10.11, Ubuntu 15.04 (64 bit) and Raspbian Jessie.

Bug fixes
* Fix bug in BasicIdentityStorage.getCertificate (Thanks Zhehao)
* http://redmine.named-data.net/issues/3342 In expressInterest, call onTimeout when there is no interest lifetime.

PyNDN v2.1beta1 (2015-09-24)
----------------------------

Changes
* In security, added KeyChain.createIdentityAndCertificate which returns the
  certificate name, instead of the deprecated createIdentity which returns the
  key name.
* Added AsyncTcpTransport and AsyncUnixTransport which use asyncio and do not
  require the application to call processEvents.
* http://redmine.named-data.net/issues/3005 In Face.registerPrefix, added the
  optional onRegisterSuccess callback.