@@ -26,6 +26,7 @@ Changes
 * http://redmine.named-data.net/issues/3152 In API callbacks, catch and log exceptions.
 * http://redmine.named-data.net/issues/3355 In Producer.createContentKey and produce,
   added an optional onError callback.
+* In IdentityManager, added prepareUnsignedIdentityCertificate.
 * Unit tests: In test_data_methods, added test_verify_ecdsa.
 * Unit tests: Added test_link.
 * Examples: Added test_sign_verify_data_hmac.
